Fix spacing

--- a/src/Modal/Modal.less
+++ b/src/Modal/Modal.less
@@ -27,16 +27,16 @@
   border: 6px solid #3b4349;
   border-radius: 4px;
   font-family: "Proxima Nova";
-  max-height: 80%;
-  box-sizing: border-box;
-  padding-top: 35px;
 }
 
 .Modal--header{
-  padding: 0 45px;
+  height: 70px;
+  padding: 35px 45px 10px;
+  box-sizing: border-box;
 
   h2{
-    margin:0;
+    padding: 0;
+    margin: 0;
   }
 }
 
